--- a/plotting/html/index.html
+++ b/plotting/html/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <div id="div-main">
-<svg width="1280" height="1024" id="svg-main" style="width:1280px;height:1024px">
+<svg id="svg-main" style="width:100%;height:100%">
+<g id="svg-axes-g"></g>
 </svg>
 </div>
 </body>
